# ssml-builder-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: ci.yml
docs/: overview.md
examples/: basic.py
scripts/: bump_version.sh
src/ssml/: core.py  elements.py
src/ssml/api/: models.py  routes.py  server.py
src/ssml/providers/: google.py
src/ssml/utils/: escaping.py  indent.py  validators.py
tests/integration/: test_api.py  test_google.py
tests/unit/: test_core.py  test_elements.py
