[project]
name = "ssml-builder"
version = "0.5"
description = "A Python library to assemble SSML documents"
authors = [
    {name = "Emmanuel Appah",email = "climaxating@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "pydantic (>=1.10.0,<2.0.0)",
    "uvicorn (>=0.18.0,<0.19.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20.0"
httpx = "^0.24.0"
black = "^23.1.0"
isort = "^5.10.0"
flake8 = "^5.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
